# devManWeather

./: .gitignore  pyproject.toml
weatherapp/: main.py  settings.py
